# wasm-micro-runtime

.github/workflows/: build_wamr_wasi_extensions.yml  release_process.yml
core/: version.h
core/iwasm/aot/: aot_intrinsic.c
core/iwasm/aot/debug/: elf.h
core/iwasm/common/: wasm_runtime_common.c  wasm_runtime_common.h
core/iwasm/compilation/: aot_llvm.c
core/iwasm/include/: wasm_export.h
core/iwasm/libraries/lib-socket/src/wasi/: wasi_socket_ext.c
core/iwasm/libraries/wasi-nn/cmake/: Findonnxruntime.cmake  wasi_nn.cmake
core/iwasm/libraries/wasi-nn/src/: wasi_nn_llamacpp.c  wasi_nn_openvino.c  wasi_nn_tensorflowlite.cpp
core/iwasm/libraries/wasi-nn/test/: utils.c
core/shared/platform/common/posix/: posix_thread.c
doc/: stability_wasm_proposals.md
samples/multi-module/: CMakeLists.txt
samples/multi-module/src/: main.c
test-tools/wamr-ide/: README.md
wamr-wasi-extensions/: test.sh
wamr-wasi-extensions/samples/nn-cli/: CMakeLists.txt  main.c
